--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,8 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/Assignment1">Assignment1</a></li>
+              <li><a ng-href="#/Assignment2">Assignment2</a></li>
+              <li><a ng-href="#/Assignment3">Assignment3</a></li>
             </ul>
           </div>
         </div>
@@ -90,6 +92,8 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/tareas.js"></script>
         <script src="scripts/controllers/assignment1.js"></script>
+        <script src="scripts/controllers/assignment2.js"></script>
+        <script src="scripts/controllers/assignment3.js"></script>
         <!-- endbuild -->
 </body>
 </html>
