--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">frontpocket</a>
+            <a class="navbar-brand" href="#/">alonsoLarra</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -53,9 +53,9 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/Assignment1">Assignment1</a></li>
-              <li><a ng-href="#/Assignment2">Assignment2</a></li>
-              <li><a ng-href="#/Assignment3">Assignment3</a></li>
+              <li><a ng-href="#/Assignments">Assignments</a></li>
+              <li><a ng-href="#/WeatherApp">WeatherApp</a></li>
+              <li><a ng-href="#/weatherSecure">Weather Secure</a></li>
             </ul>
           </div>
         </div>
@@ -106,6 +106,11 @@
         <script src="scripts/controllers/assignment1.js"></script>
         <script src="scripts/controllers/assignment2.js"></script>
         <script src="scripts/controllers/assignment3.js"></script>
+        <script src="scripts/controllers/assignment5.js"></script>
+        <script src="scripts/controllers/assignments.js"></script>
+        <script src="scripts/controllers/weatherapp.js"></script>
+        <script src="scripts/controllers/assignment6.js"></script>
+        <script src="scripts/controllers/weathersecure.js"></script>
         <!-- endbuild -->
 </body>
 
