--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
-    <script>
+<!--    <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -24,7 +24,7 @@
       ga('create', 'UA-83596306-1', 'auto');
       ga('send', 'pageview');
 
-    </script>
+    </script>-->
 
   </head>
   <body ng-app="frontpocketApp">
@@ -45,7 +45,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">alonsoLarra</a>
+            <a class="navbar-brand" href="#/">EcoPage</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -53,9 +53,6 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/Assignments">Assignments</a></li>
-              <li><a ng-href="#/WeatherApp">WeatherApp</a></li>
-              <li><a ng-href="#/weatherSecure">Weather Secure</a></li>
             </ul>
           </div>
         </div>
@@ -68,21 +65,9 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from the SerHumano team</p>
       </div>
     </div>
-
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -102,15 +87,6 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/tareas.js"></script>
-        <script src="scripts/controllers/assignment1.js"></script>
-        <script src="scripts/controllers/assignment2.js"></script>
-        <script src="scripts/controllers/assignment3.js"></script>
-        <script src="scripts/controllers/assignment5.js"></script>
-        <script src="scripts/controllers/assignments.js"></script>
-        <script src="scripts/controllers/weatherapp.js"></script>
-        <script src="scripts/controllers/assignment6.js"></script>
-        <script src="scripts/controllers/weathersecure.js"></script>
         <!-- endbuild -->
 </body>
 
