--- a/app/index.html
+++ b/app/index.html
@@ -45,16 +45,91 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">EcoPage</a>
+            <a class="navbar-brand" href="#/">Baja California</a>
           </div>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
+          <div class="dropdown">
+            <button class="dropbtn">Medio físico </button>
+            <div class="dropdown-content">
+              <a href="#/about">Características geográficas</a>
+              <a href="#">Extensión territorial</a>
+              <a href="#">Datos demográficos</a>
+              <a href="#">Flora y fauna</a>
+              <a href="#">Especies endémicas</a>
+            </div>
+          </div>
+          <div class="dropdown">
+            <button class="dropbtn">Economía</button>
+            <div class="dropdown-content">
+              <nav class="navigation">
+                <ul class="mainmenu">
+                  <li><a href="">Indicadores económicos</a>
+                  </li>
+                </ul>
+                <ul class="mainmenu">
+                  <li><a href="">Actividades económicas</a>
+                    <ul class="submenu">
+                      <li><a href="">Primarias</a></li>
+                      <li><a href="">Secundarias</a></li>
+                      <li><a href="">Terciarias</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+          <div class="dropdown">
+            <button class="dropbtn">Medio Ambiente</button>
+            <div class="dropdown-content">
+              <nav class="navigation">
+                <ul class="mainmenu">
+                  <li><a href="">La sociedad civil y el medio ambiente</a>
+                    <ul class="submenu">
+                      <li><a href="">ONG´s</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                <ul class="mainmenu">
+                  <li><a href="">Impacto ambiental</a>
+                    <ul class="submenu">
+                      <li><a href="">Casos de contaminacion</a></li>
+                      <li><a href="">Huella Hidráulica</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                <ul class="mainmenu">
+                  <li><a href="">Legislación ambiental</a>
+                    <ul class="submenu">
+                      <li><a href="">Tratados internacionales</a></li>
+                      <li><a href="">Legislación ambiental en México y BC</a></li>
+                      <li><a href="">Legislación ambiental en BC</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                <ul class="mainmenu">
+                  <li><a href="">Educación ambiental</a>
+                    <ul class="submenu">
+                      <li><a href="">¿Qué es el cambio climático?</a></li>
+                      <li><a href="">Acciones concretas para el equilibrio ambiental</a></li>
+                      <li><a href="">Ciudadanía y ética ambiental</a></li>
+                      <li><a href="">Agenda</a></li>
+                      <li><a href="">Actividades de aprendizaje y concientización</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
 
+
+<!--          <div class="collapse navbar-collapse" id="js-navbar-collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
             </ul>
-          </div>
+          </div>-->
+
+
         </div>
       </div>
     </div>
