--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
           <div class="dropdown">
             <button class="dropbtn">Medio físico </button>
             <div class="dropdown-content">
-              <a href="#/about">Características geográficas</a>
+              <a href="#/CaracteristicasGeograficas">Características geográficas</a>
               <a href="#">Extensión territorial</a>
               <a href="#">Datos demográficos</a>
               <a href="#">Flora y fauna</a>
@@ -85,14 +85,14 @@
                 <ul class="mainmenu">
                   <li><a href="">La sociedad civil y el medio ambiente</a>
                     <ul class="submenu">
-                      <li><a href="">ONG´s</a></li>
+                        <li><a href="#/ongs">Directorio de Contacto ONGs</a></li>
                     </ul>
                   </li>
                 </ul>
                 <ul class="mainmenu">
                   <li><a href="">Impacto ambiental</a>
                     <ul class="submenu">
-                      <li><a href="">Casos de contaminacion</a></li>
+                      <li><a href="#/casosContaminacion">Casos de contaminacion</a></li>
                       <li><a href="">Huella Hidráulica</a></li>
                     </ul>
                   </li>
@@ -102,7 +102,6 @@
                     <ul class="submenu">
                       <li><a href="">Tratados internacionales</a></li>
                       <li><a href="">Legislación ambiental en México y BC</a></li>
-                      <li><a href="">Legislación ambiental en BC</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -112,7 +111,7 @@
                       <li><a href="">¿Qué es el cambio climático?</a></li>
                       <li><a href="">Acciones concretas para el equilibrio ambiental</a></li>
                       <li><a href="">Ciudadanía y ética ambiental</a></li>
-                      <li><a href="">Agenda</a></li>
+                      <li><a href="#/fechasrelativas">Calendario Fechas Relativas</a></li>
                       <li><a href="">Actividades de aprendizaje y concientización</a></li>
                     </ul>
                   </li>
@@ -162,6 +161,10 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/casoscontaminacion.js"></script>
+        <script src="scripts/controllers/caracteristicasgeograficas.js"></script>
+        <script src="scripts/controllers/ongs.js"></script>
+        <script src="scripts/controllers/fechasrelativas.js"></script>
         <!-- endbuild -->
 </body>
 
