--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
                   <li><a href="">Impacto ambiental</a>
                     <ul class="submenu">
                       <li><a href="#/casosContaminacion">Casos de contaminacion</a></li>
-                      <li><a href="">Huella Hidráulica</a></li>
+                      <li><a href="#/huellahidrica">Huella Hidráulica</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -165,6 +165,7 @@
         <script src="scripts/controllers/caracteristicasgeograficas.js"></script>
         <script src="scripts/controllers/ongs.js"></script>
         <script src="scripts/controllers/fechasrelativas.js"></script>
+        <script src="scripts/controllers/huellahidrica.js"></script>
         <!-- endbuild -->
 </body>
 
