--- a/app/index.html
+++ b/app/index.html
@@ -45,47 +45,17 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">Baja California</a>
-          </div>
-
-          <div class="dropdown">
-            <button class="dropbtn">Medio físico </button>
-            <div class="dropdown-content">
-              <a href="#/CaracteristicasGeograficas">Características geográficas</a>
-              <a href="#">Extensión territorial</a>
-              <a href="#">Datos demográficos</a>
-              <a href="#">Flora y fauna</a>
-              <a href="#">Especies endémicas</a>
-            </div>
-          </div>
-          <div class="dropdown">
-            <button class="dropbtn">Economía</button>
-            <div class="dropdown-content">
-              <nav class="navigation">
-                <ul class="mainmenu">
-                  <li><a href="">Indicadores económicos</a>
-                  </li>
-                </ul>
-                <ul class="mainmenu">
-                  <li><a href="">Actividades económicas</a>
-                    <ul class="submenu">
-                      <li><a href="">Primarias</a></li>
-                      <li><a href="">Secundarias</a></li>
-                      <li><a href="">Terciarias</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </nav>
-            </div>
+            <a class="navbar-brand" href="#/">Home</a>
           </div>
           <div class="dropdown">
             <button class="dropbtn">Medio Ambiente</button>
             <div class="dropdown-content">
               <nav class="navigation">
                 <ul class="mainmenu">
-                  <li><a href="">La sociedad civil y el medio ambiente</a>
+                  <li><a href="">Legislación ambiental</a>
                     <ul class="submenu">
-                        <li><a href="#/ongs">Directorio de Contacto ONGs</a></li>
+                      <li><a href="#/agenda21">Tratados internacionales</a></li>
+                      <li><a href="#/legam">Legislación ambiental en México y BC</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -94,29 +64,41 @@
                     <ul class="submenu">
                       <li><a href="#/casosContaminacion">Casos de contaminacion</a></li>
                       <li><a href="#/huellahidrica">Huella Hidráulica</a></li>
-                    </ul>
-                  </li>
-                </ul>
-                <ul class="mainmenu">
-                  <li><a href="">Legislación ambiental</a>
-                    <ul class="submenu">
-                      <li><a href="">Tratados internacionales</a></li>
-                      <li><a href="">Legislación ambiental en México y BC</a></li>
+                      <li><a href="#/usorecursos">Uso de Recursos</a></li>
                     </ul>
                   </li>
                 </ul>
                 <ul class="mainmenu">
                   <li><a href="">Educación ambiental</a>
                     <ul class="submenu">
-                      <li><a href="">¿Qué es el cambio climático?</a></li>
-                      <li><a href="">Acciones concretas para el equilibrio ambiental</a></li>
-                      <li><a href="">Ciudadanía y ética ambiental</a></li>
+                      <li><a href="#/cambioclimatico">¿Qué es el cambio climático?</a></li>
+                      <li><a href="#/efectoInvernadero">Efecto Invernadero</a></li>
+                      <li><a href="#/accionesconcretas">Acciones concretas para el equilibrio ambiental</a></li>
                       <li><a href="#/fechasrelativas">Calendario Fechas Relativas</a></li>
-                      <li><a href="">Actividades de aprendizaje y concientización</a></li>
+                      <li><a href="#/etica">Ética Ambiental</a></li>
                     </ul>
                   </li>
                 </ul>
               </nav>
+            </div>
+          </div>
+          <div class="dropdown">
+            <button class="dropbtn">Medio físico </button>
+            <div class="dropdown-content">
+              <a href="#/CaracteristicasGeograficas">Características geográficas</a>
+              <a href="#/esteropuntabanda">Estero Punta Banda</a>
+            </div>
+          </div>
+          <div class="dropdown">
+            <button class="dropbtn">Enlaces Externos</button>
+            <div class="dropdown-content">
+              <ul class="mainmenu">
+                <li><a href="">La sociedad civil y el medio ambiente</a>
+                  <ul class="submenu">
+                    <li><a href="#/ongs">Directorio de Contacto ONGs</a></li>
+                  </ul>
+                </li>
+              </ul>
             </div>
           </div>
 
@@ -166,6 +148,15 @@
         <script src="scripts/controllers/ongs.js"></script>
         <script src="scripts/controllers/fechasrelativas.js"></script>
         <script src="scripts/controllers/huellahidrica.js"></script>
+        <script src="scripts/controllers/usorecursos.js"></script>
+        <script src="scripts/controllers/esteropuntabanda.js"></script>
+        <script src="scripts/controllers/accionesconcretas.js"></script>
+        <script src="scripts/controllers/cambioclimatico.js"></script>
+        <script src="scripts/controllers/agenda21.js"></script>
+        <script src="scripts/controllers/efectoinvernadero.js"></script>
+        <script src="scripts/controllers/legislacion.js"></script>
+        <script src="scripts/controllers/legam.js"></script>
+        <script src="scripts/controllers/etica.js"></script>
         <!-- endbuild -->
 </body>
 
